tests/paczka1/fuzzy1/18544294.err
Error in line 2: TUKa5vwqQ S77 96,24
Error in line 9: 55p A504 86,88
Error in line 17: 55p A504 185,8
Error in line 25: TUKa5vwqQ A666 8,5
Error in line 38: ROtZnEN7dh Ü504 78,4
Error in line 35: 0KP A504 65,7
